--- a/checkout.html
+++ b/checkout.html
@@ -642,51 +642,44 @@
 
   <footer class="footer">
     <div class="container footer__list">
-      <div class="footer__list1">
-        <div class="footer__item">
-          <div class="footer__item__logo">
-            <a class="" href="index.html"><img src="./build/img/logo.png" alt="logo"></a>
-            <a class="header__logo" href="index.html">BRAN<span class="header__logo_other-color">D</span></a>
-          </div>
-          <p class="footer__item__text">Objectively transition extensive data rather than cross functional
-            solutions. Monotonectally
-            syndicate
-            multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array
-            of
-            processes and cross-unit partnerships. </p>
-          <p class="footer__item__text">Efficiently plagiarize 24/365 action items and focused infomediaries.
-            Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
+      <div class="footer__item">
+        <div class="footer__item__logo">
+          <a href="index.html"><img src="./build/img/logo.png" alt="logo"></a>
+          <a class="header__logo" href="index.html">BRAN<span class="header__logo_other-color">D</span></a>
         </div>
+        <p class="footer__item__text">Objectively transition extensive data rather than cross functional
+          solutions. Monotonectally
+          syndicate
+          multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array
+          of
+          processes and cross-unit partnerships. </p>
+        <p class="footer__item__text">Efficiently plagiarize 24/365 action items and focused infomediaries.
+          Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
       </div>
-      <div class="footer__list2">
-        <div class="footer__item">
-          <h3 class="footer__heading">company</h3>
-          <a class="footer__link" href="#">home</a>
-          <a class="footer__link" href="#">shop</a>
-          <a class="footer__link" href="#">about</a>
-          <a class="footer__link" href="#">how it works</a>
-          <a class="footer__link" href="#">contact</a>
-        </div>
+
+      <div class="footer__item">
+        <h3 class="footer__heading">company</h3>
+        <a class="footer__link" href="#">home</a>
+        <a class="footer__link" href="#">shop</a>
+        <a class="footer__link" href="#">about</a>
+        <a class="footer__link" href="#">how it works</a>
+        <a class="footer__link" href="#">contact</a>
       </div>
-      <div class="footer__list3">
-        <div class="footer__item">
-          <h3 class="footer__heading">information</h3>
-          <a class="footer__link" href="#">tearms & condition</a>
-          <a class="footer__link" href="#">privacy police</a>
-          <a class="footer__link" href="#">how to buy</a>
-          <a class="footer__link" href="#">how to sell</a>
-          <a class="footer__link" href="#">promotion</a>
-        </div>
+      <div class="footer__item">
+        <h3 class="footer__heading">information</h3>
+        <a class="footer__link" href="#">tearms & condition</a>
+        <a class="footer__link" href="#">privacy police</a>
+        <a class="footer__link" href="#">how to buy</a>
+        <a class="footer__link" href="#">how to sell</a>
+        <a class="footer__link" href="#">promotion</a>
       </div>
-      <div class="footer__list4">
-        <div class="footer__item">
-          <h3 class="footer__heading">shop category</h3>
-          <a class="footer__link" href="#">men</a>
-          <a class="footer__link" href="#">women</a>
-          <a class="footer__link" href="#">child</a>
-          <a class="footer__link" href="#">apparel</a>
-          <a class="footer__link" href="#">brows all</a>
-        </div>
+      <div class="footer__item">
+        <h3 class="footer__heading">shop category</h3>
+        <a class="footer__link" href="#">men</a>
+        <a class="footer__link" href="#">women</a>
+        <a class="footer__link" href="#">child</a>
+        <a class="footer__link" href="#">apparel</a>
+        <a class="footer__link" href="#">brows all</a>
       </div>
     </div>
     <div class="footer__finish">
