--- a/product.html
+++ b/product.html
@@ -434,7 +434,6 @@
               <p class="product-promo__price_filter-paragraph">price</p>
               <div class="product-promo__price_cent">
                 <input class="product-promo__price_cent-input" type="range" min="0" max="100" step="1" value="50">
-
                 <p class="product-promo__price_cent1">$52</p>
                 <p class="product-promo__price_cent2">$400</p>
               </div>
@@ -454,6 +453,7 @@
               </div>
             </div>
           </div>
+
           <div class="product-promo__cards">
             <div class="cards__item">
               <a class="cards__link" href="product.html">
@@ -608,9 +608,13 @@
               <button class="product-promo__down-menu_button">View All</button>
             </div>
           </div>
+
         </div>
       </div>
-    </div>
+
+
+      <!-- </div> -->
+      <!-- </div> -->
   </section>
 
   <section class="product__bigbanner">
@@ -678,51 +682,43 @@
 
   <footer class="footer">
     <div class="container footer__list">
-      <div class="footer__list1">
-        <div class="footer__item">
-          <div class="footer__item__logo">
-            <a class="" href="index.html"><img src="./build/img/logo.png" alt="logo"></a>
-            <a class="header__logo" href="index.html">BRAN<span class="header__logo_other-color">D</span></a>
-          </div>
-          <p class="footer__item__text">Objectively transition extensive data rather than cross functional
-            solutions. Monotonectally
-            syndicate
-            multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array
-            of
-            processes and cross-unit partnerships. </p>
-          <p class="footer__item__text">Efficiently plagiarize 24/365 action items and focused infomediaries.
-            Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
+      <div class="footer__item">
+        <div class="footer__item__logo">
+          <a href="index.html"><img src="./build/img/logo.png" alt="logo"></a>
+          <a class="header__logo" href="index.html">BRAN<span class="header__logo_other-color">D</span></a>
         </div>
+        <p class="footer__item__text">Objectively transition extensive data rather than cross functional
+          solutions. Monotonectally
+          syndicate
+          multidisciplinary materials before go forward benefits. Intrinsicly syndicate an expanded array
+          of
+          processes and cross-unit partnerships. </p>
+        <p class="footer__item__text">Efficiently plagiarize 24/365 action items and focused infomediaries.
+          Distinctively seize superior initiatives for wireless technologies. Dynamically optimize.</p>
       </div>
-      <div class="footer__list2">
-        <div class="footer__item">
-          <h3 class="footer__heading">company</h3>
-          <a class="footer__link" href="#">home</a>
-          <a class="footer__link" href="#">shop</a>
-          <a class="footer__link" href="#">about</a>
-          <a class="footer__link" href="#">how it works</a>
-          <a class="footer__link" href="#">contact</a>
-        </div>
+      <div class="footer__item">
+        <h3 class="footer__heading">company</h3>
+        <a class="footer__link" href="#">home</a>
+        <a class="footer__link" href="#">shop</a>
+        <a class="footer__link" href="#">about</a>
+        <a class="footer__link" href="#">how it works</a>
+        <a class="footer__link" href="#">contact</a>
       </div>
-      <div class="footer__list3">
-        <div class="footer__item">
-          <h3 class="footer__heading">information</h3>
-          <a class="footer__link" href="#">tearms & condition</a>
-          <a class="footer__link" href="#">privacy police</a>
-          <a class="footer__link" href="#">how to buy</a>
-          <a class="footer__link" href="#">how to sell</a>
-          <a class="footer__link" href="#">promotion</a>
-        </div>
+      <div class="footer__item">
+        <h3 class="footer__heading">information</h3>
+        <a class="footer__link" href="#">tearms & condition</a>
+        <a class="footer__link" href="#">privacy police</a>
+        <a class="footer__link" href="#">how to buy</a>
+        <a class="footer__link" href="#">how to sell</a>
+        <a class="footer__link" href="#">promotion</a>
       </div>
-      <div class="footer__list4">
-        <div class="footer__item">
-          <h3 class="footer__heading">shop category</h3>
-          <a class="footer__link" href="#">men</a>
-          <a class="footer__link" href="#">women</a>
-          <a class="footer__link" href="#">child</a>
-          <a class="footer__link" href="#">apparel</a>
-          <a class="footer__link" href="#">brows all</a>
-        </div>
+      <div class="footer__item">
+        <h3 class="footer__heading">shop category</h3>
+        <a class="footer__link" href="#">men</a>
+        <a class="footer__link" href="#">women</a>
+        <a class="footer__link" href="#">child</a>
+        <a class="footer__link" href="#">apparel</a>
+        <a class="footer__link" href="#">brows all</a>
       </div>
     </div>
     <div class="footer__finish">
