--- a/index.html
+++ b/index.html
@@ -382,123 +382,140 @@
 
             <div class="cards__list">
                 <div class="cards__item" data-id="1" data-name="Mango People T-shirt" data-price="63">
-                    <div class="cards__link">
+                    <div class="cards__add">
                         <img class="cards__img" src="./build/img/card1.png" alt="card">
+                        <div class="cards__add_button">
+                            <button class="cards__add__link">
+                                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                                <p class="cards__add__text">Add to Cart</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards__link">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
                             <p class="cards__text__red">$63.00</p>
                         </div>
                     </div>
-                    <div class="cards__add">
-                        <button class="cards__add__link">
-                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                            <p class="cards__add__text">Add to Cart</p>
-                        </button>
-                    </div>
+
                 </div>
                 <div class="cards__item" data-id="2" data-name="Mango People T-shirt" data-price="48">
-                    <a class="cards__link" href="single.html">
+                    <div class="cards__add">
                         <img class="cards__img" src="./build/img/card2.png" alt="card">
+                        <div class="cards__add_button">
+                            <button class="cards__add__link">
+                                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                                <p class="cards__add__text">Add to Cart</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards__link">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
                             <p class="cards__text__red">$48.00</p>
                         </div>
-                    </a>
-                    <div class="cards__add">
-                        <button class="cards__add__link">
-                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                            <p class="cards__add__text">Add to Cart</p>
-                        </button>
                     </div>
                 </div>
                 <div class="cards__item" data-id="3" data-name="Mango People T-shirt" data-price="50">
-                    <a class="cards__link" href="single.html">
+                    <div class="cards__add">
                         <img class="cards__img" src="./build/img/card3.png" alt="card">
+                        <div class="cards__add_button">
+                            <button class="cards__add__link">
+                                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                                <p class="cards__add__text">Add to Cart</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards__link">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
                             <p class="cards__text__red">$50.00</p>
                         </div>
-                    </a>
-                    <div class="cards__add">
-                        <button class="cards__add__link">
-                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                            <p class="cards__add__text">Add to Cart</p>
-                        </button>
                     </div>
                 </div>
                 <div class="cards__item" data-id="4" data-name="Mango People T-shirt" data-price="54">
-                    <a class="cards__link" href="single.html">
+                    <div class="cards__add">
                         <img class="cards__img" src="./build/img/card4.png" alt="card">
+                        <div class="cards__add_button">
+                            <button class="cards__add__link">
+                                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                                <p class="cards__add__text">Add to Cart</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards__link">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
                             <p class="cards__text__red">$54.00</p>
                         </div>
-                    </a>
-                    <div class="cards__add">
-                        <button class="cards__add__link">
-                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                            <p class="cards__add__text">Add to Cart</p>
-                        </button>
                     </div>
                 </div>
                 <div class="cards__item" data-id="5" data-name="Mango People T-shirt" data-price="70">
-                    <a class="cards__link" href="single.html">
+                    <div class="cards__add">
                         <img class="cards__img" src="./build/img/card5.png" alt="card">
+                        <div class="cards__add_button">
+                            <button class="cards__add__link">
+                                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                                <p class="cards__add__text">Add to Cart</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards__link">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
                             <p class="cards__text__red">$70.00</p>
                         </div>
-                    </a>
-                    <div class="cards__add">
-                        <button class="cards__add__link">
-                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                            <p class="cards__add__text">Add to Cart</p>
-                        </button>
                     </div>
                 </div>
                 <div class="cards__item" data-id="6" data-name="Mango People T-shirt" data-price="47">
-                    <a class="cards__link" href="single.html">
+                    <div class="cards__add">
                         <img class="cards__img" src="./build/img/card6.png" alt="card">
+                        <div class="cards__add_button">
+                            <button class="cards__add__link">
+                                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                                <p class="cards__add__text">Add to Cart</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards__link">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
                             <p class="cards__text__red">$47.00</p>
                         </div>
-                    </a>
-                    <div class="cards__add">
-                        <button class="cards__add__link">
-                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                            <p class="cards__add__text">Add to Cart</p>
-                        </button>
                     </div>
                 </div>
                 <div class="cards__item" data-id="7" data-name="Mango People T-shirt" data-price="78">
-                    <a class="cards__link" href="single.html">
+                    <div class="cards__add">
                         <img class="cards__img" src="./build/img/card1.png" alt="card">
+                        <div class="cards__add_button">
+                            <button class="cards__add__link">
+                                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                                <p class="cards__add__text">Add to Cart</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards__link">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
                             <p class="cards__text__red">$78.00</p>
                         </div>
-                    </a>
-                    <div class="cards__add">
-                        <button class="cards__add__link">
-                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                            <p class="cards__add__text">Add to Cart</p>
-                        </button>
                     </div>
                 </div>
                 <div class="cards__item" data-id="8" data-name="Mango People T-shirt" data-price="50">
-                    <a class="cards__link" href="single.html">
+                    <div class="cards__add">
                         <img class="cards__img" src="./build/img/card2.png" alt="card">
+                        <div class="cards__add_button">
+                            <button class="cards__add__link">
+                                <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
+                                <p class="cards__add__text">Add to Cart</p>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="cards__link">
                         <div class="cards__price">
                             <p class="cards__text">Mango People T-shirt</p>
                             <p class="cards__text__red">$50.00</p>
                         </div>
-                    </a>
-                    <div class="cards__add">
-                        <button class="cards__add__link">
-                            <img class="cards__add__img" src="./build/img/basket_white.png" alt="basket">
-                            <p class="cards__add__text">Add to Cart</p>
-                        </button>
                     </div>
                 </div>
             </div>
@@ -631,7 +648,7 @@
             </div>
         </div>
     </footer>
-    <script src="build/js/script.js"></script>
+    <script src="build/js/main.js"></script>
 </body>
 
 </html>
