--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="basket__product basket__product_hidden">
                     <div class="basket__name basket__header">
                         <div>Название товара</div>
-                        <div>Количество</div>
+                        <div>Кол-во</div>
                         <div>Цена за шт.</div>
                         <div>Итого</div>
                     </div>
